data/derived/sp14/progs/unify/prog2801.ml.out
Characters 39-52:
  let stringOfList f l = "["^ List.map f (sepConcat l) ^"]";;
                                         ^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type 'a list
